# maui-strike

./: CMakeLists.txt  Messages.sh  org.kde.strike.desktop  org.kde.strike.metainfo.xml
po/ar/: strike.po
po/ca/: strike.po
po/ca@valencia/: strike.po
po/cs/: strike.po
po/de/: strike.po
po/en_GB/: strike.po
po/eo/: strike.po
po/es/: strike.po
po/eu/: strike.po
po/fi/: strike.po
po/fr/: strike.po
po/ga/: strike.po
po/gl/: strike.po
po/he/: strike.po
po/it/: strike.po
po/ja/: strike.po
po/ka/: strike.po
po/ko/: strike.po
po/lt/: strike.po
po/lv/: strike.po
po/nl/: strike.po
po/pl/: strike.po
po/pt/: strike.po
po/pt_BR/: strike.po
po/sa/: strike.po
po/sk/: strike.po
po/sl/: strike.po
po/sv/: strike.po
po/tr/: strike.po
po/uk/: strike.po
po/zh_CN/: strike.po
po/zh_TW/: strike.po
src/: CMakeLists.txt  Messages.sh  main.cpp  main.qml  qml.qrc  strike.h
src/assets/: img_assets.qrc
src/controllers/: cmakeapi.cpp  cmakeapi.h  cmakedata.cpp  cmakedata.h  cmakeproject.cpp  cmakeproject.h  cmakeprojectmanager.cpp  cmakeprojectmanager.h  cmakeprojecttarget.cpp  cmakeprojecttarget.h  cmaketarget.cpp  cmaketarget.h  configureprocess.cpp  configureprocess.h  process.cpp  process.h  processmanager.cpp  processmanager.h  projectmanager.cpp  projectmanager.h  projectpreferences.cpp  projectpreferences.h
src/controllers/git/: cloneprocess.cpp  cloneprocess.h  gitprocess.cpp  gitprocess.h
src/controllers/processes/: configureprocess.cpp  configureprocess.h
src/helpers/cmake/: kdevcmakedocumentation.json  kdevcmakemanager.json
src/helpers/cmakebuilder/: kdevcmakebuilder.json
src/helpers/genericprojectmanager/: kdevgenericmanager.json
src/helpers/projectmanagerview/: kdevprojectmanagerview.json
src/models/: cmakeprojectmodel.cpp  cmakeprojectmodel.h  cmakeprojectsmodel.cpp  cmakeprojectsmodel.h  cmaketargetsmodel.cpp  cmaketargetsmodel.h  fonts.cpp  sourcesmodel.cpp  sourcesmodel.h
src/views/: PlacesSidebar.qml
src/views/editor/: Editor.qml  EditorLayout.qml  EditorView.qml  EditorView.qml.SdasjF  NewFileDialog.qml
src/views/widgets/: BuildBar.qml  BuildOutputPanel.qml  GitPanel.qml  OutputPanel.qml  ProjectConfigDialog.qml  SettingsDialog.qml
